tests/sema/negative/missing_return_in_non_void_function.nv
fn f() : int {
    let x : int = 1;
}

fn main() : void {
    return;
}
